<resources>
    <string name="app_name">Time Work</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menuAddButton">Add</string>
    <string name="menuMainDuration">duration</string>
    <string name="menuMainAbout">about</string>
    <string name="menuMainGenarate">genrate</string>
    <string name="MainTitle">No Task Timing Begin </string>
    <string name="TitleOfTask"> Android App Development Task</string>
    <string name="DescriptionOfTask">Android App Development with kotlin</string>
    <string name="Task_Delete">Delete Button</string>
    <string name="EditTask">editButton</string>
    <string name="addEditName">Task Name (Required)</string>
    <string name="addEditDescription">Task Description (Optional)</string>
    <string name="addEditShortOrder"> Short Order (Low To High)</string>
    <string name="addEditSubmit">Save</string>
    <string name="SubmitButton"> Submit </string>
    <string name="floatinactionbutton">floatinActionButton</string>
    <string name="fristTimeRun">initialize</string>
    <string name="fristTimeDescription">Hello bro add a new task And enjoy quality work</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="delete_dialog">Delete</string>
    <string name="dialog_message_delete">Deleting will also timing data and associate task ID: %1$d %2$s</string>
    <string name="Dialog_id_del_show">Abandon Changes</string>
    <string name="Dialog_id_del_negative_show">counting Editing</string>
    <string name="cancel_diegg_message">You have unsaved changed Do you want to abandon changed counting editing?</string>
    <string name="copyrightAbout">Copyright © 2021 iamzen.in</string>
    <string name="emailAbout">Support for email TimeWork@iamzen.in</string>
    <string name="webLink_v21">Instructions available in iamzen.in</string>
    <string name="webLink">Instructions available in </string>
    <string name="webUrl"><u>"https://zen.blog"</u></string>
    <string name="webLinkClickError">Don\'t Browser found application. cannot not visit world wide web </string>
    <string name="aboutCredits"><b>icon drive from clock image by publicDomainVector.org</b> <b>anonymous</b></string>
    <string name="TimingRecordShow">Start Timing %1$s</string>
    <string name="details_task_name">Task Name</string>
    <string name="details_date">Date</string>
    <string name="details_duration">Duration</string>
    <string name="details_description">Description</string>
    <string name="title_activity_duration">DurationActivity</string>
    <string name="title_activity_durations">DurationsActivity</string>
    <string name="rm_filter_week">show week</string>
    <string name="rm_title_data_range">date show</string>
    <string name="rm_title_delete">Delete old timing</string>
    <string name="rm_filter_day">filter one day</string>
    <string name="date_title_filter">Date Filter</string>
    <string name="optionDeleteSelecte">Date is deleted</string>
    <string name="deleteSureTitle">"If you sure you deleted timing record %1$s"</string>
    <string name="whenTabTimingStart">whenTabTimingStart</string>
    <string name="enter_endTiming">End Timing Add</string>
</resources>