<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/aboutLinearLayoutPadding"
    android:paddingEnd="@dimen/aboutLinearLayoutPadding"
    android:paddingBottom="@dimen/aboutLinearLayoutPadding">

    <TextView
        android:id="@+id/about_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center_horizontal|end"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="1.0.1"
        tools:ignore="RtlHardcoded" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        />
    <TextView
        android:id="@+id/copyright_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/copyrightAbout"
        android:textSize="16sp"
        android:textStyle="bold" />

    <include
        layout="@layout/about_web_url"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/email_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autoLink="email"
        android:minHeight="48dp"
        android:text="@string/emailAbout"
        android:textColorLink="@color/web_link"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/about_credits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aboutCredits" />

</LinearLayout>